2006-05-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Start major rework, still in progress.

2006-05-24  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: merge functionality
	* src/ViewManager.py: merge functionality
	* src/MergePeople.py: fix merge (ui and birth/death events)
	* src/GrampsDb/_WriteXML.py: remove redundant birth/death entries
	* src/GrampsDb/_DbUtils.py: fix index setting of death index
	* src/GrampsDb/_WriteGedcom.py: remove redundant birth/death 
	references
	* src/images/stock_notes.png: added
	* src/images/Makefile.am: add stock_notes.png
	* src/gramps_main.py: register stock_notes as gramps_notes
	* src/DisplayTabs.py: use gramps_notes instead of stock_notes

2006-05-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: make shading optional
	* src/GrampsCfg.py: make shading optional
	* src/Config/_GrampsConfigKeys.py: make shading optional
	* data/gramps.schemas.in: make shading optional

2006-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/Utils.py: move event/attr constants to GedcomInfo.
	* src/plugins/TestcaseGenerator.py: Use new methods.
	* src/DisplayTabs/_LdsModel.py: Use new methods.
	* src/Editors/_EditLdsOrd.py: Use new methods.
	* src/RelLib/_LdsOrd.py: Add new methods.
	* src/GrampsDb/_WriteGedcom.py: Do not import unused module.
	* src/GrampsDb/_ReadXML.py: Use methods from LdsOrd.
	* src/lds.py: Rename to LdsUtils.py
	* src/GrampsDb/_ReadGedcom.py: Use new module name.
	* src/Makefile.am (gdir_PYTHON): Ship new file.

	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Upgrade LdsOrd.

2006-05-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py: Catch exceptions of the PixbufLoader that
	occur if nothing or not an image have been downloaded.
	
2006-05-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: finish shading
	* src/GrampsDb/_DbUtils.py: add birth/death index set funcion