@@ -42,47 +42,56 @@ import gtk
 import Utils
 import const
 import GrampsDisplay
+import ManagedWindow
 
 #-------------------------------------------------------------------------
 #
 # Merge Places
 #
 #-------------------------------------------------------------------------
-class MergePlaces:
+class MergePlaces(ManagedWindow.ManagedWindow):
     """
     Merges to places into a single place. Displays a dialog box that
     allows the places to be combined into one.
     """
-    def __init__(self,database,new_handle,old_handle,update):
-        self.db = database
+    def __init__(self, dbstate, uistate, new_handle, old_handle, update):
+
+        ManagedWindow.ManagedWindow.__init__(self, uistate, [], self.__class__)
+
+        self.db = dbstate.db
         self.new_handle = new_handle
         self.old_handle = old_handle
         self.p1 = self.db.get_place_from_handle(self.new_handle)
         self.p2 = self.db.get_place_from_handle(self.old_handle)
         self.update = update
-        self.trans = self.db.transaction_begin()
 
         self.glade = gtk.glade.XML(const.merge_glade,"merge_places","gramps")
-        self.top = self.glade.get_widget("merge_places")
-        Utils.set_titles(self.top,self.glade.get_widget('title'),
-                         _("Select title"))
+        self.set_window(self.glade.get_widget("merge_places"),
+                        self.glade.get_widget('title'),
+                        _("Select title"))
+        
         self.glade.get_widget("title1_text").set_text(self.p1.get_title())
         self.glade.get_widget("title2_text").set_text(self.p2.get_title())
         self.t3 = self.glade.get_widget("title3_text")
         self.t3.set_text(self.p1.get_title())
+
+        self.glade.get_widget('cancel').connect('clicked', self.close_window)
+        self.glade.get_widget('ok').connect('clicked', self.merge)
+        self.glade.get_widget('help').connect('clicked', self.help)
         
-        self.glade.signal_autoconnect({
-            "destroy_passed_object" : Utils.destroy_passed_object,
-            "on_merge_places_clicked" : self.on_merge_places_clicked,
-            "on_help_places_clicked" : self.help,
-            })
-        self.top.show()
+        self.window.show()
+
+    def close_window(self, obj):
+        self.close()
+        
+    def build_menu_names(self,obj):
+        return (_('Merge Places'),None)
 
     def help(self,obj):
         """Display the relevant portion of GRAMPS manual"""
         GrampsDisplay.help('adv-merge-places')
 
-    def on_merge_places_clicked(self,obj):
+    def merge(self,obj):
         """
         Performs the merge of the places when the merge button is clicked.
         """
@@ -134,8 +143,10 @@ class MergePlaces:
                     self.p1.add_alternate_locations(l)
 
         # remove old and commit new source
-        self.db.remove_place(self.old_handle,self.trans)
-        self.db.commit_place(self.p1,self.trans)
+        trans = self.db.transaction_begin()
+
+        self.db.remove_place(self.old_handle,trans)
+        self.db.commit_place(self.p1,trans)
 
         # replace references in other objetcs
         # people
@@ -143,23 +154,23 @@ class MergePlaces:
             person = self.db.get_person_from_handle(handle)
             if person.has_handle_reference('Place',self.old_handle):
                 person.replace_handle_reference('Place',self.old_handle,self.new_handle)
-                self.db.commit_person(person,self.trans)
+                self.db.commit_person(person,trans)
         # families
         for handle in self.db.get_family_handles():
             family = self.db.get_family_from_handle(handle)
             if family.has_handle_reference('Place',self.old_handle):
                 family.replace_handle_reference('Place',self.old_handle,self.new_handle)
-                self.db.commit_family(family,self.trans)
+                self.db.commit_family(family,trans)
         # events
         for handle in self.db.get_event_handles():
             event = self.db.get_event_from_handle(handle)
             if event.has_handle_reference('Place',self.old_handle):
                 event.replace_handle_reference('Place',self.old_handle,self.new_handle)
-                self.db.commit_event(event,self.trans)
+                self.db.commit_event(event,trans)
 
-        self.db.transaction_commit(self.trans,_("Merge Places"))
+        self.db.transaction_commit(trans,_("Merge Places"))
         self.update()
-        Utils.destroy_passed_object(obj)
+        self.close()
 
 #-------------------------------------------------------------------------
 #
@@ -212,7 +223,7 @@ class MergeSources:
         self.glade.get_widget('ok').connect('clicked',self.merge)
         self.glade.get_widget('cancel').connect('clicked',self.close)
         self.glade.get_widget('help').connect('clicked',self.help)
-        self.trans = self.db.transaction_begin()
+        trans = self.db.transaction_begin()
         self.top.show()
 
     def close(self,obj):
